# kgekit

./: .classpath  .gitignore  .project  .style.yapf  .travis.yml  CMakeLists.txt  MANIFEST.in  Pipfile  README.md  build.gradle  clang-format.txt  env.sh  escape_file.py  extract_facts_from_yago3.sh  extract_labels_from_yago3.sh  indexer.cpp  indexer.h  indexer_test.cpp  kgekit.cpp  kgekit.h  kgekit_impl.cpp  kgekit_impl_test.cpp  preprocess_data.py  reverse_triples_validation.py  settings.gradle  setup.py  translator.h  translator_test.cpp  unescape_file.py
cmake/Hunter/: config.cmake
data/: YAGO3-10.data
driver/: build.gradle
driver/src/main/java/: module-info.java
driver/src/main/java/me/erickguan/kgekit/cli/: Driver.java  ExtractLabel.java  ExtractTriple.java
gradle/wrapper/: gradle-wrapper.properties
kgdoc/: .gitignore  README.md  build.sbt
kgdoc/project/: Dependencies.scala
kgdoc/src/main/resources/: application.conf
kgdoc/src/main/scala/me/erickguan/: WordCount.scala
kgdoc/src/main/scala/me/erickguan/kgdoc/: Discarder.scala  FileResolver.scala  Hello.scala  NodeFormatterBare.scala  PlainWriter.scala  StreamRDFCompose.scala  StreamRDFDiscarder.scala  StreamRDFEntityPairReverser.scala  StreamRDFLanguageCollector.scala  StreamRDFPredicatesDiscarder.scala  StreamRDFSubjectDiscarder.scala  StreamRDFWriterBare.scala  StreamRDFWriterBareLabel.scala  StreamRDFWriterEntityPair.scala  TaskDispatch.scala
kgdoc/src/main/scala/me/erickguan/kgdoc/tasks/: CollectLanguage.scala  ExtractEntityPairByPredicates.scala  ExtractLabel.scala  ExtractPredicates.scala  ExtractUrlPairByPredicates.scala  FileResolver.scala  ModelFilters.scala
kgdoc/src/test/scala/me/erickguan/: WordCountTest.scala
kgdoc/src/test/scala/me/erickguan/kgdoc/: HelloSpec.scala
kgedata/: CMakeLists.txt  bernoulli_corruptor.cpp  bernoulli_corruptor.h  common.h  corruptors.cpp  corruptors.h  entity_number_indexer.cpp  entity_number_indexer.h  entity_number_indexer_test.cpp  kgedata.cpp  kgedata.h  kgedata_py.cpp  kgedata_test.cpp  kgedata_type.cpp  label_generator.cpp  label_generator.h  lcwa_no_throw_sampler.cpp  lcwa_no_throw_sampler.h  negative_samplers.cpp  negative_samplers.h  ranker.cpp  ranker.h  ranker_test.cpp  test_helper.cpp  test_helper.h  triple_expander.cpp  triple_expander.h
kgedata/messages/: CMakeLists.txt  triple_index.proto
kgedata/tests/: bernoulli_corruptor_test.py  corruptors_test.py  entity_number_indexer_test.py  kgedata_test.py  label_generator_test.py  lcwa_no_throw_sampler_test.py  netagive_samplers_test.py  ranker_test.py  test_corruptors.py  test_label_generator.py  test_ranker.py  test_triple_expander.py  triple_expander_test.py
kgedata/tests/fixtures/: corruptor_triple.txt
kgekit/: CMakeLists.txt  __init__.py  bernoulli_corruptor.cpp  bernoulli_corruptor.h  data.py  entity_number_indexer.cpp  entity_number_indexer.h  entity_number_indexer_test.cpp  io.py  kgekit.cpp  kgekit.h  kgekit_impl.cpp  kgekit_impl_test.cpp  lcwa_no_throw_sampler.cpp  lcwa_no_throw_sampler.h  ranker.cpp  ranker.h  stats.py  stl_types.h  test_helper.cpp  test_helper.h  translation.h  translation.py  translation_test.cpp  triple_expander.cpp  triple_expander.h  utils.py
kgekit/messages/: CMakeLists.txt
kgekit/structs/: CMakeLists.txt
kgekit/tests/: bernoulli_corruptor_test.py  data_test.py  entity_number_indexer_test.py  io_test.py  kgekit_test.py  lcwa_no_throw_sampler_test.py  ranker_test.py  test_data.py  triple_expander_test.py
kgekit/tests/fixtures/: corruptor_triple.txt  direct_link_triples.txt  duplicate_triple.txt  inverse_triple.txt  labels.txt  ranker_train.txt  test.ttl  triple.txt
kgrdf/: .gitignore  build.sbt
kgrdf/src/main/scala/: Main.scala
processing_scripts/: basic_stat.sh  build_dataset.py  build_datasets.sh  build_wikidata_dataset.py  extract_facts_from_yago3.sh  extract_labels_from_yago3.sh  filter_binary_literals.py  gen_plaintext_translation.py  match_triple_desc.py  match_triple_labels.py  match_triple_summary.py  shuffle_split_gold_sets.py  strip_labels.py  translate_binary_literals.py  triple_process.py  triple_validation.py
src/: CMakeLists.txt  extract_from_yago3.py  indexer.cpp  indexer.h  indexer_test.cpp  kgekit.cpp  kgekit.h  kgekit_impl_test.cpp  translation.cpp  translation.h  translation_test.cpp  translator.cpp  translator.h  translator_test.cpp  triple_container.h
src/kgekit/: CMakeLists.txt  entity_number_indexer.cpp  entity_number_indexer.h  entity_number_indexer_test.cpp  indexer.cpp  indexer.h  indexer_test.cpp  io.py  kgekit.cpp  kgekit.h  kgekit_impl.cpp  kgekit_impl_test.cpp  test_helper.h  translation_test.cpp
src/tests/fixtures/: triple_index.txt
tests/: entity_number_indexer_test.py  io_test.py  kgekit_test.py
tests/fixtures/: escaped_test.ttl  triple.txt
tools/: bump_upload_package.sh
triple-transform/: build.gradle
triple-transform/src/main/java/: module-info.java
triple-transform/src/main/java/me/erickguan/kgekit/transformer/: CountingTransformer.java  CountingTripleStrategy.java  DirectStrategy.java  FileTransformer.java  FileTransfromer.java  LabelMatchingStrategy.java  MatchingStrategy.java  TransformStrategy.java  Transformer.java  VoidStrategy.java
triple-transform/src/main/java/me/erickguan/kgekit/writer/: SimpleRDFWriter.java
triple-transform/src/main/me/erickguan/transformer/: Transformer.java  build.gradle  module-info.java
triple-transform/src/test/java/me/erickguan/kgekit/transformer/: StrategiesTest.java
triple-transform/src/test/resources/fixtures/: triple.ttl  triple_label.ttl  triple_sample_label_output.txt  triple_sample_output.txt
